<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:orientation="vertical" >

    <!-- select mode -->
    <TextView
        android:id="@+id/test_info"
        style="@style/Text_Small_Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dip" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/test_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <Button
                android:id="@+id/test_case1"
                style="@style/Text_Large_Black"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_marginTop="10dip"
                android:text="@string/feeder_test_case1" />

            <Button
                android:id="@+id/test_case2"
                style="@style/Text_Large_Black"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_marginTop="10dip"
                android:text="@string/feeder_test_case2" />

            <Button
                android:id="@+id/test_case3"
                style="@style/Text_Large_Black"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_marginTop="10dip"
                android:text="@string/feeder_test_case3" />

            <Button
                android:id="@+id/test_case4"
                style="@style/Text_Large_Black"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_marginTop="10dip"
                android:text="@string/feeder_test_case4" />

            <Button
                android:id="@+id/test_case5"
                style="@style/Text_Large_Black"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_marginTop="10dip"
                android:text="@string/feeder_test_case5" />

            <Button
                android:id="@+id/test_case6"
                style="@style/Text_Large_Black"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_marginTop="10dip"
                android:text="@string/feeder_test_case6" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>