<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/spot_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/sn"
            style="@style/Text_Middle_Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="20dip"
            android:hint="@string/input_sn"
            android:inputType="number" />

        <Button
            android:id="@+id/send_sn"
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/ok" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/spot_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/spot_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            style="@style/Text_Large_White"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_gravity="center_horizontal"
            android:background="@color/red"
            android:text="@string/test_failed" />

        <Button
            android:id="@+id/test_retry"
            style="@style/Text_Large_Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_retry" />
    </LinearLayout>

</LinearLayout>