<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/test_info"
            style="@style/Text_Middle_Black"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginTop="0dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/set_print"
                style="@style/Text_Middle_Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/Set_print" />

            <Button
                android:id="@+id/set_wifi"
                style="@style/Text_Middle_Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/Set_wifi" />

            <Button
                android:id="@+id/connect_dev"
                style="@style/Text_Middle_Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/Connect_device" />

            <Button
                android:id="@+id/test_auto"
                style="@style/Text_Middle_Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/Test_auto" />
        </LinearLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:numColumns="4" >
    </GridView>

</LinearLayout>